assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');



body {
    font-family: 'Montserrat', sans-serif;
    color: #4D4036;
    padding: 0;
    margin: 0;
    align-content: center;
}

.no-gutters{
    padding: 0;
    margin: 0 auto;
}

.container-fluid {
    max-width: 1200px;
}

.container {
    max-width: 1200px;
}



/* ------------------------------------- Header - Logo Banner */

header {
    margin: 0;
    align-content: center;
}

.container-logo {
    height: auto;
}

.banner-logo {
    margin-top: 20px;
}

.logo-quintain {
    display: inline-flex;
    height: 100px;
    margin-top: 25px;
    margin-bottom: 25px;
}

.logo-wp {
    display: inline-flex;
    height: 100px;
    margin-top: 25px;
    margin-bottom: 25px;
}

/* -------------------------------------  Header - Navigation Bar */

.list-inline-item:not(:last-child) {
    margin: 0;
    padding: 0;
}

.menucontainer {
    font-size: 0;
    padding: 0;
}

#nav {
    margin: 0; 
    padding: 0; 
}

.menuitem {
    padding: 0;
    margin: 0;
}

.menuitem a {
    color: #4D4036;
}

.active {
    background-color: rgba(153, 137, 123, 0.308);
}

.active a {
    font-weight: 800;
}

.navbar li .menuitem-project1 {
    display: block;
    position: relative;
    margin: 0 auto;
    width: 0;
    height: 0; 
    transition: width 1s, height 1s;
    bottom: 0;
}

.menuitem:hover > .menuitem-project1 {
    animation-name: menu-hover;
    animation-duration: .5s;
    animation-fill-mode: forwards;
    z-index: 100; 
}
  
@keyframes menu-hover {
    from {height: 0; width: 0; bottom: 0;}
    to {height: 200px; width: 200px; bottom: 100px;}
}    


.navbar li {
    display: inline-block;
    font-size: 15px;
    font-weight: 200;
    line-height: 40px;
    max-height: 40px;
    border-top: 1px solid #4D4036;
    border-bottom: 1px solid #4D4036;
    vertical-align: middle;
    text-align: center;
    margin-top: 25px;
    margin-bottom: 25px;
    }

/* ------------------------------------- Navitation Bar - small screen */

.btn {

}

.btn-default {
    padding: 0;
    box-shadow: 0px 0px 0px 0px;
    color: #4D4036;
    font-size: 15px;
    font-weight: 200;
    line-height: 40px;
    border-top: 1px solid #4D4036;
    border-bottom: 1px solid #4D4036;
    border-radius: 0;   
}

.btn-default:focus, .btn-default.focus {
    box-shadow: 0px 0px 0px 0px;
    font-size: 15px;
    font-weight: bolder;
}

.dropdown-menu {
    width: 100%;
    text-align: center;
    border: 0px solid white;
    margin: 0;
    padding: 0;
}

.dropdown-item {
    color: #4D4036;
    font-size: 15px;
    font-weight: 200;
}

a.dropdown-item {
    font-weight: 200;
}

.dropdown-item:active, .dropdown-item:hover, .dropdown-item:focus {
    background-color: rgba(77, 64, 54, 0.11);
    color: #4D4036;
}

/* ------------------------------------- Main Section */

.overview {
    display: block;
    border-right: 1px solid rgba(77, 64, 54, 0.5);
}

.overview, .chartbox {
    padding: 0 10px;
    margin: 20px 0;
}

.overview h1, .chartbox h1 {
    font-size: 18px;
    font-weight: 600;
    text-align: center;
}

.overview p {
    max-width: 90%;
    align-content: center;
    font-size: 13px;
    font-weight: 200;
    text-align: justify;
    margin: auto;
}




/* ------------------------------------- Timeline */

/* Modal Button */

.btn-timeline {
    display: block;
    width: 300px;
    padding: 10px 20px;
    margin: 15px auto;
    background-color: #7A9499;
    color: #2E474D;
    border: 0px solid #7A9499;
    align-content: center;
}

.btn-timeline:hover { 
    background-color: #2E474D;
    color: #7A9499;
    border: 0px solid white;
    box-shadow: 0 0 0 0;
}

.btn-timeline:focus, .btn-timeline.focus { 
    box-shadow: 0 0 0 0.2rem rgba(46, 71, 77, 0.137);
}

/* Timeline Chart */

.modal-dialog {
    margin: 250px auto;
}

.modal-body {
    overflow-x: auto;
    padding: 0px;
    margin: 20px 20px 0 20px;
}





/* ------------------------------------- Charts */


#chart_div {
    margin: 0 auto;
}

.chart {
    margin: 0 auto;
    min-height: 200px
}

/* ------------------------------------- Gallery */

.gallery {
    margin: 25px auto;
}

.gallery h1 {
    font-size: 18px;
    font-weight: 600;
    text-align: center;
}

.container-carousel {
    width: 60vw;
    padding: 0 10vw;
    margin-top: 10px;
    background-color: rgba(77, 64, 54, 0.185);
}

@media screen and (max-width: 768px) {
    .container-carousel {
        width: 70vw;
        padding: 0;
        margin-top: 25px;
}}

/* ------------------------------------- Footer */

.footer-container {
    padding: 0;
    padding-top: 15px;
}

.footerrow {
    padding: 15px 0 0 0;
    margin: 0 0 50px 0;
    border-top: 1px solid rgba(77, 64, 54, 0.15);
}

.footer-col-map {
    display: inline-flex;
}

.footer-col-web {
    display: inline-flex;
    text-align: right;
    font-size: 14px;
    color: rgba(77, 64, 54, 0.3);
}

.footer-col-web p, .footer-col-web a {
    margin: auto;
}

.footer-col-web img {
    height: 14px;
}

.footer-col-web img:hover {
    height: 28px;
}

.btn-map {
    color: rgba(77, 64, 54, 0.3);
    background-color: #ffffff;
    font-weight: 100;
}

.btn-map:hover {
    background-color: rgba(77, 64, 54, 0.05);
    border: 0px solid #ffffff;
    box-shadow: 0 0 0 0.2rem rgba(122, 148, 153, 0.178);
}

.btn-map:focus, btn-map.focus {
    background-color: #ffffff;
    box-shadow: 0 0 0 ;
}

.map-box {
    padding: 0px;
    border: 0px solid #ffffff;
}

#map {
    height: 300px;
    width: 100%;
}

